fix: workflow build tag

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
           # В параметре tags задаётся название и тег для образа.
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
-          tags: ваш-логин-на-docker-hub/taski_backend:latest
+          tags: mishamancik/taski_backend:latest
   
 
   
