--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
       - mikhail
 
 jobs:
-  tests:
+  backend_tests:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -53,7 +53,7 @@ jobs:
         python manage.py test
 
 
-  build_and_push_to_docker_hub:
+  build_backend_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
     needs: tests
@@ -114,7 +114,7 @@ jobs:
 
 
   build_frontend_and_push_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
+    name: Push frontend to DockerHub
     runs-on: ubuntu-latest
     needs: frontend_tests
     steps:
@@ -136,7 +136,7 @@ jobs:
 
 
   build_gateway_and_push_to_docker_hub:
-    name: Push gateway Docker image to DockerHub
+    name: Push gateway to DockerHub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -159,7 +159,7 @@ jobs:
 
   send_message:
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: [build_backend_and_push_to_docker_hub, build_frontend_and_push_to_docker_hub, build_gateway_and_push_to_docker_hub]
     steps:
     - name: Send message
       uses: appleboy/telegram-action@master
