--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
           # В параметре tags задаётся название и тег для образа.
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
-          tags: ${{ secrets.DOCKER_USERNAME }}:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_backend:latest
   
 
   frontend_tests:
